[package]
name = "async-pool-benchmark"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.88" }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
deadpool = { package = "deadpool", version = "0.12.2", features = ['managed'] }
mobc = { package = "mobc", version = "0.8.5" }
plotters = { version = "0.3.7", features = ["svg_backend"] }
bb8 = { package = "bb8", version = "0.9.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
abort-on-drop = "0.2.2"
async-object-pool = "0.1.5"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
